lib/panels/panes_dock_bindings.dart

// Generated by package:ffigen from macos/Runner/panes_dock.h.
// Symbols are resolved from the running executable (Swift @_cdecl).
// ignore_for_file: always_specify_types, camel_case_types, non_constant_identifier_names
// ignore_for_file: type=lint

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import
import 'dart:ffi' as ffi;

/// FFI bindings to the native macOS dock helper (macos/Runner/panes_dock.h).
class PanesDockBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  PanesDockBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  PanesDockBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Registers the reverse callbacks (NativeCallable function pointers).
  void panes_dock_register(PanesDragCallback drag, PanesDropCallback drop) {
    return _panes_dock_register(drag, drop);
  }

  late final _panes_dock_registerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(PanesDragCallback, PanesDropCallback)
        >
      >('panes_dock_register');
  late final _panes_dock_register = _panes_dock_registerPtr
      .asFunction<void Function(PanesDragCallback, PanesDropCallback)>();

  /// Hides the title bar of the detached window whose title equals `token`,
  /// positions it at the pointer, and starts reporting its drags.
  void panes_dock_decorate(ffi.Pointer<ffi.Char> token) {
    return _panes_dock_decorate(token);
  }

  late final _panes_dock_decoratePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'panes_dock_decorate',
      );
  late final _panes_dock_decorate = _panes_dock_decoratePtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Makes the main window's title bar transparent/full-size (keeps traffic lights).
  void panes_dock_decorate_main() {
    return _panes_dock_decorate_main();
  }

  late final _panes_dock_decorate_mainPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
        'panes_dock_decorate_main',
      );
  late final _panes_dock_decorate_main = _panes_dock_decorate_mainPtr
      .asFunction<void Function()>();

  /// Begins a native window-move for `token` using the in-flight mouse event,
  /// so a Flutter-drawn header can act as the window's drag handle.
  void panes_dock_start_window_drag(ffi.Pointer<ffi.Char> token) {
    return _panes_dock_start_window_drag(token);
  }

  late final _panes_dock_start_window_dragPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'panes_dock_start_window_drag',
      );
  late final _panes_dock_start_window_drag = _panes_dock_start_window_dragPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();
}

typedef PanesDragCallbackFunction = ffi.Void Function(
  ffi.Pointer<ffi.Char> token,
  ffi.Double x,
  ffi.Double y,
  ffi.Double w,
  ffi.Double h,
  ffi.Double mainX,
  ffi.Double mainY,
  ffi.Double mainW,
  ffi.Double mainH,
  ffi.Double pointerX,
  ffi.Double pointerY,
);
typedef DartPanesDragCallbackFunction = void Function(
  ffi.Pointer<ffi.Char> token,
  double x,
  double y,
  double w,
  double h,
  double mainX,
  double mainY,
  double mainW,
  double mainH,
  double pointerX,
  double pointerY,
);

/// Streamed continuously while a detached panel window is dragged. All values
/// share a top-left origin coordinate space. `token` is heap-allocated by the
/// native side (strdup) and must be freed by the Dart callback.
typedef PanesDragCallback =
    ffi.Pointer<ffi.NativeFunction<PanesDragCallbackFunction>>;
typedef PanesDropCallbackFunction = ffi.Void Function(
  ffi.Pointer<ffi.Char> token,
);
typedef DartPanesDropCallbackFunction = void Function(
  ffi.Pointer<ffi.Char> token,
);

/// Fired once when a dragged panel window is released. `token` is heap-allocated
/// (strdup) and must be freed by the Dart callback.
typedef PanesDropCallback =
    ffi.Pointer<ffi.NativeFunction<PanesDropCallbackFunction>>;
